# adil

./: .gitignore  .railwayignore  CLAUDE.md  README.md  iag-overlap-audit.md  pyproject.toml
adil-document-uploader/: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  README.md  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml  railway.toml
adil-document-uploader/alembic/: env.py
adil-document-uploader/alembic/versions/: a3c9e1f70b22_add_solicitor_firms_table.py  b8d1c2e4f3a1_add_acts_tables.py  c1f2a3b4d5e6_add_ograg_status_and_spend.py  f2b5ff000b4e_create_judgments_table.py
adil-document-uploader/app/: config.py  database.py  main.py
adil-document-uploader/app/api/: admin.py  judgments.py
adil-document-uploader/app/auth/: api_key.py
adil-document-uploader/app/models/: __init__.py  act.py  judgment.py  solicitor_firm.py
adil-document-uploader/app/schemas/: __init__.py  judgment.py
adil-document-uploader/app/services/: acts_seed.py  gemini_uploader.py  legislation_client.py  ograg_backfill.py  ontology_writer.py  sra_scraper.py  telegram.py  tna_client.py  xml_parser.py
adil-document-uploader/app/workers/: settings.py  tasks.py
adil-document-uploader/scripts/: run_backfill.py
adil-document-uploader/tests/: conftest.py  test_fetch_acts.py  test_gemini_uploader.py  test_judgments_api.py  test_legislation_client.py  test_ograg_backfill.py  test_ograg_extract_pass1.py  test_ograg_extract_pass2.py  test_ograg_extract_pass3.py  test_tna_client.py  test_workers.py  test_xml_parser.py
adil-outreach-engine/: .dockerignore  .env.example  .gitignore  CHANGES.md  CLAUDE.md  Dockerfile  Dockerfile.worker  QA_GUIDE.md  README.md  RUNBOOK.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
adil-outreach-engine/alembic/: env.py
adil-outreach-engine/alembic/versions/: add_dry_run_and_email_dry_run.py  add_missing_enum_values.py  add_sponsorship_interest_table.py  e94bb186bea8_initial_models.py
adil-outreach-engine/app/: config.py  database.py  main.py
adil-outreach-engine/app/agents/: checkpoints.py  graph.py  llm.py  state.py
adil-outreach-engine/app/api/: campaigns.py  contacts.py  conversion_webhooks.py  dashboard.py  outreach.py  public.py  webhooks.py
adil-outreach-engine/app/auth/: api_key.py  webhook_verify.py
adil-outreach-engine/app/models/: __init__.py  agent_checkpoint.py  campaign.py  contact.py  conversion.py  outreach_event.py  sponsorship_interest.py
adil-outreach-engine/app/schemas/: __init__.py  campaign.py  contact.py  conversion.py  event.py  outreach.py  stats.py  webhook.py
adil-outreach-engine/app/services/: bounce.py  cal.py  conversion.py  email.py  events.py  goal_evaluator.py  stripe.py
adil-outreach-engine/app/workers/: locks.py  rate_limiter.py  settings.py  tasks.py
adil-outreach-engine/data/: consortium-umbrella-groups.json
adil-outreach-engine/docs/: 2026-03-26-outreach-engine-design.md
adil-outreach-engine/scripts/: seed_consortium_campaign.py  seed_solicitor_campaign.py  soak_mailbox_loop.py  soak_mailbox_loop_v2.py  test_send_to_self.py
adil-outreach-engine/tests/: conftest.py  test_auth.py  test_campaigns.py  test_classify_sponsorship.py  test_contacts.py  test_conversions.py  test_e2e_campaign.py  test_full_e2e.py  test_health.py  test_outreach.py  test_webhook_inbound_token.py  test_webhooks.py  test_workers.py
adil-outreach-engine/tests/agents/: test_graph.py  (+5 more)
(+328 files in other folders)
