[project]
name = "adil-outreach-engine"
version = "0.1.0"
description = "AI-powered outreach and conversion platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "stripe>=8.0.0",
    "slowapi>=0.1.9",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "sendgrid>=6.11.0",
    "aiosmtplib>=4.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "respx>=0.22.0",
    "fakeredis>=2.21.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real infrastructure (Postgres, LLM APIs, network)",
    "timeout: set a timeout in seconds for a test (requires pytest-timeout or used as metadata)",
]

[tool.ruff]
target-version = "py312"
line-length = 120
